--- a/parallax/2018-12-17-parallex-hw.html
+++ b/parallax/2018-12-17-parallex-hw.html
@@ -40,7 +40,7 @@
 
         #bg_banner {
             height: 82vh;
-            background-image: url("img/banner.jpg");
+            background-image: url("/parallax/img/banner.jpg");
             background-size: cover;
             background-position:25%;
         }
