--- a/RWD/rwd-prctice.html
+++ b/RWD/rwd-prctice.html
@@ -76,19 +76,19 @@
         }
 
         .x .img {
-            background-image: url("img/Bmo-close eye.jpg");
+            background-image: url("/RWD/img/Bmo-close eye.jpg");
             background-size: cover;
             background-position:50% ;
         }
 
         .y .img {
-            background-image: url("img/Bmo-Wallpapers-HD.png");
+            background-image: url("/RWD/img/Bmo-Wallpapers-HD.png");
             background-size: cover;
             background-position: 2%;
         }
 
         .z .img {
-            background-image: url("img/Bmo-face.jpg");
+            background-image: url("/RWD/img/Bmo-face.jpg");
             background-size: cover;
             background-position: 50%;
              
