--- a/parallax/2018-12-17-parallex-hw.html
+++ b/parallax/2018-12-17-parallex-hw.html
@@ -116,7 +116,7 @@
 
 <body>
     <nav id="sub_nav">
-        <img src="/parallax/img/logo white.png" alt="logo">
+        <img src="img/logo white.png" alt="logo">
     </nav>
     <section id="bg_banner"></section>
     <section id="main_nav">
