--- a/twitter/twitter.html
+++ b/twitter/twitter.html
@@ -21,7 +21,7 @@
             margin: 0;
             height: 2000px;
             background-color: #E6ECF0;
-            background-image: url("img/gaming-pattern.png");
+            background-image: url("/twitter/img/gaming-pattern.png");
         }
         .container{
             max-width: 1140px;
@@ -93,7 +93,7 @@
         .banner{
             height: 320px;
             background-color: #63C5AE;
-            background-image: url("img/Bmo-2D.png");
+            background-image: url("/twitter/img/Bmo-2D.png");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: 50% 60%;
@@ -119,7 +119,7 @@
             border: 5px solid white;
             background-color: white;
             border-radius: 50%;
-            background-image:url("img/beemo avatar.jpg" );
+            background-image:url("/twitter/img/beemo avatar.jpg" );
             background-size: cover;
             overflow: hidden;
         }
